# poc-bunnet

./: README.md  pyproject.toml
app/: __init__.py
app/models/: __init__.py  author.py  post.py
app/routes/public/: __init__.py  index.py
